Update README.md
Added jvm arguments