@@ -1,1 +1,5 @@
 ## Minecraft (dot) files
+
+```
+-Xmx10G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M
+```
